# boost-cmake

./: .cmake-format  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
cmake/: CMakeLists.txt.in
cmake/Modules/: AddBoostLib.cmake  StandaloneBuild.cmake  ccache.cmake
libs/: chrono.cmake  context.cmake  fiber.cmake  filesystem.cmake  graph_parallel.cmake  header.cmake  iostreams.cmake  json.cmake  locale.cmake  log.cmake  math.cmake  mpi.cmake  random.cmake  system.cmake  thread.cmake  url.cmake
patches/1.80.0/: date_time-01.patch  date_time-02.patch
